--- a/style.css
+++ b/style.css
@@ -85,10 +85,7 @@
    margin-bottom:27px ;
    box-shadow: 10px 5px 30px whitesmoke;
  }
- .players:hover{
-   transition: transform .5s;
-   transform: scale(1.25);
- }
+ 
  /* .........................players image section.................  */
  .players img{
     width: 300px;
@@ -125,37 +122,59 @@
  }
 
  @media only screen and (max-width:688px) {
-    .conatiner{
+
+
+      .container{ 
        display: grid;
-       grid-template-columns: repeat(2, 1fr);
-       height: 970px;
-    }
-     .header-info{
-        width: 60%;
-        padding-left: 16px;
-        padding-top: 80px;
-        padding-right: 60px;
-     }
-     .header-info p{
-        color: white;
-        font-size: 64px;
-        font-weight: 700;
-        line-height: 80px;
-        padding-bottom: 25px;
-     }
-  ..header-image img{
-     width: 330px;
-     height: 260px;
+       grid-template-columns: repeat(1, 1fr);
+       background-color: red;
+       width: 100%;
+       height: 960px;
+      }
+      .header-info{
+         margin-top: 207px;
+         margin-left:0%;
+      }
+      
+      .header-info p{
+         margin: 0px;
+         padding-left: 10px;
+         color:#ffffff;
+         font-size: 50px;
+         font-weight: 700;
+         width: 350px;
+         height: 280px;
+         margin-bottom: 27px;
+      }
+      .header-image img{
+      width: 350px;
+      height: 300px; 
+      margin-top: 70px;
+      margin-bottom: 114px;
+      margin-left: 0%;
+      }
+      
+      .player-info{
+         grid-template-columns: repeat(1, 1fr);
+         justify-content: center;
+         padding-left: 180px;
+      }
+      .players p{
+         font-size: 16px;
+         text-align: justify;
+         width: 300px;
+         height: 104px;
+         margin-top: 0px;
+      }
+      
+      .foot{
+         justify-content: center;
+         margin-top:50px;
+      }
 
-  }   
-
-  .players{
-     display: grid;
-     grid-template-columns: repeat(1, 1f1);
-     justify-content: center;
-  }
-  .foot img{
-     width: 70%;
-  }    
- }
- 
+      .foot img{    
+         width: 300px;
+         padding-left:1px;
+      }
+   }
+      
