--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@
    margin-bottom:27px ;
    box-shadow: 10px 5px 30px whitesmoke;
  }
+ .players:hover{
+    transition: transform 0.5s;
+    transform: scale(1.5);
+ }
  
  /* .........................players image section.................  */
  .players img{
